# ATLAS

./: .gitignore
src/atlas_bringup/: CMakeLists.txt  package.xml
src/atlas_bringup/config/: ekf.yaml
src/atlas_bringup/launch/: atlas.launch.py  atlas_sim.launch.py
src/atlas_bringup/models/: atlas_robot.sdf
src/atlas_bringup/scripts/: lighting_controller.py
src/atlas_bringup/worlds/: warehouse_bright.sdf  warehouse_dim.sdf  warehouse_ignition_fuel_full.sdf  warehouse_normal.sdf
src/atlas_mapping/: CMakeLists.txt  package.xml
src/atlas_msgs/: CMakeLists.txt  package.xml
src/atlas_msgs/msg/: DetectedObject.msg
src/atlas_navigation/: CMakeLists.txt  package.xml
src/atlas_navigation/config/: behavior_server.yaml  bt_navigator.yaml  controller_server.yaml  global_costmap.yaml  local_costmap.yaml  nav.rviz  planner_server.yaml  smoother_server.yaml  velocity_smoother.yaml
src/atlas_navigation/launch/: atlas_nav.launch.py
src/atlas_perception/: CMakeLists.txt  package.xml
src/atlas_perception/action/: FindShape.action
src/atlas_perception/config/: params.yaml
src/atlas_perception/launch/: atlas_perception.launch.py
src/atlas_perception/src/: shape_detector_node.cpp
src/atlas_slam/: CMakeLists.txt  package.xml
src/atlas_slam/config/: lio_sam.rviz  lio_sam.yaml  rtabmap.rviz
src/atlas_slam/launch/: atlas_slam_rtabmap.launch.py  slam_lio.launch.py  slam_rtabmap.launch.py
src/atlas_slam/src/: pc2_fixer.cpp
src/atlas_state_estimation/: CMakeLists.txt  package.xml
src/atlas_state_estimation/config/: ekf.yaml  ekf_basic.yaml  state_estimation.rviz
src/atlas_state_estimation/launch/: atlas_state_estimation.launch.py
src/atlas_state_estimation/scripts/: imu_covariance_fixer.py
src/atlas_state_estimation/src/: tf_health_check.cpp
